@@ -4,5 +4,6 @@ java -jar target/Diversify-statements-1.0-SNAPSHOT-jar-with-dependencies.jar git
 
 for i in `seq 1 $1`
 do
+    java -Xmx2000m -XX:MaxPermSize=256m -jar target/Diversify-statements-1.0-SNAPSHOT-jar-with-dependencies.jar $(cat propertiesFile) &
     java -Xmx2000m -XX:MaxPermSize=256m -jar target/Diversify-statements-1.0-SNAPSHOT-jar-with-dependencies.jar $(cat propertiesFile)
 done
